--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+dj-database-url==0.5.0
 Django==2.2
+django-heroku==0.3.1
+psycopg2==2.9.3
 pytz==2021.3
 sqlparse==0.4.2
 ua-parser==0.10.0
 user-agents==2.2.0
+whitenoise==5.3.0
